src/corelib/tools/qsharedpointer.cpp
@@ -1453,6 +1453,9 @@ QtSharedPointer::ExternalRefCountData *QtSharedPointer::ExternalRefCountData::ge
     x->strongref.store(-1);
     x->weakref.store(2);  // the QWeakPointer that called us plus the QObject itself
     if (!d->sharedRefcount.testAndSetRelease(0, x)) {
+        // ~ExternalRefCountData has a Q_ASSERT, so we use this trick to
+        // only execute this if Q_ASSERTs are enabled
+        Q_ASSERT((x->weakref.store(0), true));
         delete x;
         x = d->sharedRefcount.loadAcquire();
         x->weakref.ref();
